--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Spacedrop</title>
+    <title>SpaceDrop</title>
   </head>
   <body>
     <div id="app"></div>
